[workspace]
members = ["bin/*", "crates/*", "programs/*"]
resolver = "2"

[workspace.package]
version = "0.12.5"
edition = "2021"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "allow"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.dependencies]
alloy-wormhole = { path = "crates/alloy-wormhole" }
wormhole-program-core = { path = "crates/program-core" }

# alloy
alloy-primitives = { version = "1.0", default-features = false }
alloy-eip2930 = { version = "0.2", default-features = false }
alloy-eips = { version = "1.0.9", default-features = false }
alloy-provider = { version = "1.0.9", default-features = false }
alloy-serde = { version = "1.0.9", default-features = false }
alloy-consensus = { version = "1.0.9", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-trie = { version = "0.8", default-features = false }

# sp1
sp1-sdk = "4.0.0"
sp1-zkvm = "4.0.0"
sp1-build = "4.0.0"

# risc0
risc0-zkvm = "2.0.2"
# use a patch until <https://github.com/risc0/risc0/pull/3143> is merged
risc0-build = { git = "https://github.com/rkrasiuk/risc0", branch = "patch-manifest-dir" } # "2.1.1"

# pico
pico-sdk = { git = "https://github.com/brevis-network/pico" }

serde = { version = "1.0", default-features = false }
serde_with = { version = "3", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

tokio = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false }
clap = { version = "4.0", features = ["derive", "env"] }
sha2 = { version = "0.10", default-features = false }
getrandom = "0.2"
