[package]
name = "wormhole-program-core"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-wormhole = { workspace = true, features = ["serde"] }

# `serde` feature
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
alloy-wormhole = { workspace = true, features = ["test-utils"] }

[features]
serde = ["dep:serde"]
