[package]
name = "wormhole-program"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-wormhole = { workspace = true, features = ["serde"] }

# `serde` feature
serde = { workspace = true, features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]